[package]
name = "gesture_mapping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
csv = "1.2.2"
itertools = "0.11.0"
num = "0.4.0"
serde = { version = "1.0.171", features = ["derive"] }
#jemalloc-ctl = "0.3"
#jemallocator = "0.3"
splines = {version="4.2.0", features = ["cgmath"]}
cgmath = "0.18.0"
nalgebra = "0.32.3"
